--- a/playground/playground.html
+++ b/playground/playground.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>pkg-name Playground</title>
+	<title>Keyboard Simulator Playground</title>
 	<style type="text/css">
 		* {
 			margin: 0;
