--- a/playground/playground.html
+++ b/playground/playground.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 	<div class="super-container">
-
+		<p>bla bla bla bla</p>
+		<input id="input" type="text"/>
 	</div>
 
 	<script src="../dev-bundles/playground.js"></script>
